pokemon-front/pokedex/src/App.css
.Header {
  background-color: #FF1C1C;
  padding: 10px 20px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.logo-img {
  width: 40px;
  background-color: #FFEECC;
  padding: 4px;
}

@media (min-width: 768px) {
  .logo-img {
    width: 50px;
  }
}

.pokedex-title {
  color: #FFCC00;
  text-shadow: 
    -1px -1px 0 #000,  
    1px -1px 0 #000,  
    -1px 1px 0 #000,  
    1px 1px 0 #000;
  margin: 0;
}

.table-striped tbody tr:nth-of-type(odd) {
  background-color: #FFEECC;
}

.search-box {
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 100%;
}

.search-input, .search-select {
  width: 100%; 
}

@media (min-width: 768px) {
  .search-box {
    flex-direction: row;
    align-items: center;
    gap: 15px;
  }
}

@media (max-width: 700px) {
  .Header .logo-img, .Header .pokedex-title {
    display: none; 
  }
}

.pagination-controls {
  display: flex;
  flex-wrap: wrap; 
  justify-content: center;
  gap: 5px;
  margin-top: 10px;
}

.pagination-controls button {
  background-color: #FFCC00;
  color: #000;
  border: 1px solid #000;
  width: 30px;
  height: 30px;
  font-size: 12px;
  transition: transform 0.2s ease, background-color 0.2s ease, font-size 0.2s ease;
  display: flex;
  align-items: center;
  justify-content: center;
}

.pagination-controls button:hover {
  background-color: #FFD700;
  transform: scale(1.1);
  font-size: 14px;
}

@media (min-width: 768px) {
  .pagination-controls button {
    width: 40px;
    height: 40px;
    font-size: 14px;
  }

  .pagination-controls button:hover {
    font-size: 16px;
    transform: scale(1.15);
  }
}

